# Memorix

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/io/: CMakeLists.txt  console_io.cpp  server.cpp
lib/io/include/: console_io.h  server.h
lib/memorix/: CMakeLists.txt  app.cpp  card_deck.cpp  memorix.cpp
lib/memorix/include/: app.h  card.h  card_deck.h  file_reader.h  io.h  memorix.h
lib/reader/: CMakeLists.txt  json_reader.cpp
lib/reader/include/: json_reader.h
